--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.21",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -41,7 +39,26 @@
     ]
   },
   "devDependencies": {
+    "@types/cssnano": "^4.0.1",
+    "@types/file-loader": "^5.0.1",
+    "@types/node": "^12.20.27",
+    "@types/node-sass": "^4.11.2",
+    "@types/postcss-import": "^12.0.1",
     "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "@types/sass-loader": "^8.0.2",
+    "css-loader": "^6.3.0",
+    "cssnano": "^5.0.8",
+    "file-loader": "^6.2.0",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.8",
+    "postcss-cssnext": "^3.1.1",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.1.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "sugarss": "^4.0.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3"
   }
 }
